--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,5 +31,7 @@
     <color name="green">#1D8348</color>
     <color name="forgot_button">#ffac5d</color>
     <color name="change_pass_button">#ff3ea7</color>
+    <color name="dirt_blue">#416A87</color>
+    <color name="dark_blue">#5275A1</color>
 
 </resources>
