--- a/app/src/main/res/layout/activity_esummit.xml
+++ b/app/src/main/res/layout/activity_esummit.xml
@@ -31,9 +31,10 @@
     <TextView
         android:id="@+id/e_summit_text"
         android:layout_width="wrap_content"
+        android:layout_marginTop="8dp"
         android:layout_height="wrap_content"
         android:text="@string/e_summit_19"
-        android:textColor="#000"
+        android:textColor="#FFF"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/e_summit_tagline"
@@ -46,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/esummit_tagline"
-        android:textColor="#000"
+        android:textColor="#FFF"
         android:textSize="22sp"
         app:layout_constraintBottom_toTopOf="@+id/e_summit_date"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,6 +61,7 @@
         android:fontFamily="@font/noto_sans_bold"
         android:lines="1"
         android:text="@string/es_date"
+        android:textColor="#FFF"
         android:textAlignment="center"
         android:textSize="16sp"
         android:paddingStart="20dp"
