--- a/app/src/main/res/layout/es_rv_item.xml
+++ b/app/src/main/res/layout/es_rv_item.xml
@@ -21,6 +21,7 @@
             android:id="@+id/speaker_name"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:textColor="#FFF"
             android:textSize="25sp"
             android:gravity="center"
             android:textStyle="bold"
@@ -31,6 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:textSize="15sp"
+            android:textColor="#FFF"
             android:gravity="center"
             android:textAlignment="center"/>
 
