--- a/app/src/main/res/layout/layout_cardview_home.xml
+++ b/app/src/main/res/layout/layout_cardview_home.xml
@@ -48,6 +48,7 @@
                     android:layout_marginBottom="32dp"
                     android:paddingBottom="24dp"
                     android:text="@string/event"
+                    android:textColor="@color/colorWhite"
                     android:textSize="36sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
