otp ui improved

--- a/app/src/main/res/layout/layout_card_sponsors.xml
+++ b/app/src/main/res/layout/layout_card_sponsors.xml
@@ -33,8 +33,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:paddingTop="0dp"
-                android:paddingBottom="0dp"
-                android:src="@drawable/loading1" />
+                android:paddingBottom="0dp" />
         </RelativeLayout>
 
         <LinearLayout
