--- a/app/src/main/res/layout/fragment_email.xml
+++ b/app/src/main/res/layout/fragment_email.xml
@@ -10,6 +10,14 @@
     android:background="#ff68a2">
 
     <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_back"
+        android:padding="15dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:srcCompat="@drawable/ic_lock_design"
@@ -69,9 +77,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:boxBackgroundColor="#ff68a2"
+        app:errorTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:textAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/forgot_edit_guide">
+        app:layout_constraintTop_toBottomOf="@id/forgot_edit_guide"
+        app:errorEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/forgot_email"
@@ -79,7 +90,7 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:textColor="@color/colorWhite"
-            android:inputType="textEmailAddress|textNoSuggestions"
+            android:inputType="textEmailAddress"
             android:paddingStart="25dp"
             android:paddingEnd="25dp"
             android:paddingTop="15dp"
@@ -111,19 +122,5 @@
         app:layout_constraintTop_toBottomOf="@id/forgot_button_guide"
         app:rippleColor="#5d65ff"
         tools:layout_editor_absoluteX="150dp" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/forgot_back"
-        style="@style/Widget.MaterialComponents.Button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/Widget.MaterialComponents.Button"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:text="@string/back_to_login_screen"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/forgot_verify"
-        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
