--- a/app/src/main/res/layout/activity_esummit.xml
+++ b/app/src/main/res/layout/activity_esummit.xml
@@ -10,6 +10,17 @@
     tools:context=".activities.ESummitActivity">
 
     <ImageView
+        android:id="@+id/esummit_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_back"
+        android:focusable="true"
+        android:clickable="true"
+        android:layout_margin="24dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <ImageView
         android:id="@+id/e_summit_icon"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
