--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -19,6 +19,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/event_bg" />
+
+    <ImageView
+        android:id="@+id/event_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_back"
+        android:focusable="true"
+        android:clickable="true"
+        android:layout_margin="24dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
