--- a/app/src/main/res/layout/fragment_change_number.xml
+++ b/app/src/main/res/layout/fragment_change_number.xml
@@ -8,18 +8,17 @@
     android:background="#DD3377">
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidline"
+        android:id="@+id/change_num_image_guide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.15"/>
+        app:layout_constraintGuide_percent="0.3"/>
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/guidline"/>
+        android:text=""
+        app:layout_constraintTop_toBottomOf="@id/change_num_image_guide"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidline1"
