--- a/app/src/main/res/layout/fragment_email.xml
+++ b/app/src/main/res/layout/fragment_email.xml
@@ -5,17 +5,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
+    android:focusable="true"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.forgotPassword.EmailFragment"
-    android:background="#ff68a2">
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_back"
-        android:padding="15dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+    android:background="#ff68a2"
+    android:elevation="10dp"
+    tools:targetApi="lollipop">
 
     <ImageView
         android:layout_width="0dp"
@@ -28,7 +24,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/forgot_guide"/>
+        app:layout_constraintBottom_toTopOf="@id/forgot_guide" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/forgot_guide"
@@ -55,8 +51,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="casual"
-        android:layout_marginTop="20dp"
         android:textSize="20sp"
+        android:layout_marginTop="20dp"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         android:textAlignment="center"
@@ -72,15 +68,9 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/forgot_email_layout"
-        android:theme="@style/TextLabel"
-        style="@style/ForgotTextInputLayoutStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:boxBackgroundColor="#ff68a2"
-        app:errorTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:textAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        style="@style/ForgotTextInputLayoutStyle"
         app:layout_constraintTop_toBottomOf="@id/forgot_edit_guide"
         app:errorEnabled="true">
 
@@ -89,15 +79,40 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:textColor="@color/colorWhite"
-            android:inputType="textEmailAddress"
             android:paddingStart="25dp"
             android:paddingEnd="25dp"
             android:paddingTop="15dp"
             android:paddingBottom="15dp"
-            android:hint="Registered Email" />
+
+            android:hint="Registered Email"/>
 
     </com.google.android.material.textfield.TextInputLayout>
+
+    <!--<com.google.android.material.textfield.TextInputLayout-->
+        <!--android:id="@+id/forgot_email_layout"-->
+        <!--android:theme="@style/TextLabel"-->
+        <!--style="@style/ForgotTextInputLayoutStyle"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--app:boxBackgroundColor="#ff68a2"-->
+        <!--app:errorTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
+        <!--android:textAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintTop_toBottomOf="@id/forgot_edit_guide"-->
+        <!--app:errorEnabled="true">-->
+
+        <!--<com.google.android.material.textfield.TextInputEditText-->
+            <!--android:id="@+id/forgot_email"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:textSize="20sp"-->
+            <!--android:textColor="@color/colorWhite"-->
+            <!--android:inputType="textEmailAddress"-->
+
+            <!--android:hint="Registered Email" />-->
+
+    <!--</com.google.android.material.textfield.TextInputLayout>-->
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/forgot_button_guide"
