--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -79,7 +79,7 @@
         <item name="android:textColor">#f00</item>
     </style>
 
-    <style name="TextLabel" parent="TextAppearance.AppCompat">
+    <style name="TextLabelLogin" parent="TextAppearance.AppCompat">
         <item name="android:textColorHint">@color/colorLightBlack</item>
         <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
         <item name="colorAccent">@color/black</item>
@@ -96,5 +96,10 @@
         <item name="android:layout_marginStart">30dp</item>
         <item name="android:layout_marginEnd">30dp</item>
         <item name="boxStrokeColor">@color/colorWhite</item>
+        <item name="android:colorControlActivated" tools:targetApi="lollipop"></item>
+    </style>
+
+    <style name="EditTextLabelForgot" parent="TextAppearance.AppCompat">
+        <item name="colorControlActivated">@color/colorWhite</item>
     </style>
 </resources>
