--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -63,7 +63,7 @@
         <item name="android:layout_margin">8dp</item>
         <item name="android:textAlignment">center</item>
         <item name="android:textSize">18sp</item>
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="forgot_email_button">
