--- a/app/src/main/res/layout/es_rv_item.xml
+++ b/app/src/main/res/layout/es_rv_item.xml
@@ -1,11 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
-    android:background="@color/transparent"
+    android:layout_height="wrap_content"
+    android:padding="16dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:alpha="0.4"
+        android:background="@color/colorWhite"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:padding="10dp"
-    android:orientation="horizontal">
+    android:alpha="1"
+    android:orientation="horizontal"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent">
 
     <ImageView
         android:id="@+id/speaker_image"
@@ -21,7 +41,7 @@
             android:id="@+id/speaker_name"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:textColor="#FFF"
+            android:textColor="@color/colorWhite"
             android:textSize="25sp"
             android:gravity="center"
             android:textStyle="bold"
@@ -32,10 +52,11 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:textSize="15sp"
-            android:textColor="#FFF"
+            android:textColor="@color/colorWhite"
             android:gravity="center"
             android:textAlignment="center"/>
 
     </LinearLayout>
 
 </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
