--- a/app/src/main/res/layout/layout_cardview_event.xml
+++ b/app/src/main/res/layout/layout_cardview_event.xml
@@ -8,10 +8,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="-3dp"
-        android:layout_marginLeft="-2.75dp"
+        android:layout_marginStart="-2.75dp"
         app:cardBackgroundColor="@color/transparent"
-        android:clickable="true"
-        app:cardCornerRadius="0dp">
+        android:focusable="true"
+        android:clickable="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
