viren latest code

--- a/app/src/main/res/layout/fragment_otp.xml
+++ b/app/src/main/res/layout/fragment_otp.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".fragments.OTPDialogFragment">
+    tools:context=".fragments.OTPDialogFragment"
+    android:clickable="true"
+    android:focusable="true">
 
     <ImageView
         android:layout_width="match_parent"
