--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.EventFragment"
-    android:background="@color/transparent">
+    android:background="@color/transparent"
+    android:focusable="true">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
@@ -13,13 +14,24 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="1.0" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.625" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.9" />
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/event_bg"
-        tools:layout_editor_absoluteX="-155dp"
-        tools:layout_editor_absoluteY="63dp" />
+        android:focusable="true"/>
 
     <ImageView
         android:id="@+id/eventfrag_back"
@@ -40,27 +52,12 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/event_bghills"
+            app:srcCompat="@drawable/event_bghills"
             android:layout_marginLeft="-40dp"
             android:layout_marginRight="-40dp"
             android:layout_marginBottom="-5dp"
             />
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/nameevent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="22dp"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/roboto"
-        android:text="@string/name"
-        android:textAllCaps="true"
-        android:textColor="#fff"
-        android:textSize="60sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <RelativeLayout
         android:id="@+id/name"
@@ -68,16 +65,18 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:background="@color/black_overlay"
-        app:layout_constraintTop_toBottomOf="@id/nameevent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:padding="25dp"
+        android:paddingStart="24dp"
+        android:paddingEnd="24dp"
+        android:paddingTop="24dp"
         android:orientation="vertical">
 
     <ImageView
         android:id="@+id/event_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_centerHorizontal="true"
         app:srcCompat="@drawable/ic_event_bq"/>
 
@@ -88,11 +87,12 @@
             android:layout_below="@+id/event_img"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:fontFamily="@font/roboto"
             android:text="@string/name"
             android:textAllCaps="true"
             android:textColor="@color/colorWhite"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
 
 </RelativeLayout>
 
@@ -129,7 +129,7 @@
             android:fontFamily="@font/roboto"
             android:maxLines="1"
             android:text="Date: 2019-07-29 | Time: 10:00am"
-            android:textColor="@color/colorLightBlack"
+            android:textColor="@color/black"
             android:textSize="22dp" />
         <RelativeLayout
             android:layout_width="match_parent"
@@ -147,7 +147,7 @@
                     android:layout_height="match_parent"
                     android:fontFamily="@font/roboto"
                     android:text="Venue: "
-                    android:textColor="@color/colorLightBlack"
+                    android:textColor="@color/black"
                     android:textSize="24sp" />
                 <ImageView
                     android:layout_width="wrap_content"
@@ -164,7 +164,7 @@
                     android:fontFamily="@font/roboto"
                     android:text="TBD"
                     android:textAllCaps="true"
-                    android:textColor="@color/colorLightBlack"
+                    android:textColor="@color/black"
                     android:textSize="22sp" />
             </LinearLayout>
         </RelativeLayout>
@@ -172,13 +172,17 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_margin="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/venue_layout"
+        app:layout_constraintTop_toBottomOf="@id/guideline1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
-
+        app:layout_constraintBottom_toBottomOf="@id/guideline2">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="4dp">
         <TextView
 
             android:id="@+id/event_text"
@@ -187,12 +191,11 @@
             android:layout_margin="10dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:autoSizeMaxTextSize="22sp"
-            android:autoSizeTextType="uniform"
             android:fontFamily="@font/roboto"
-            android:text="Here name discription will be placed and shown like in thi example "
-            android:textColor="@color/colorLightBlack"
-            android:textSize="18dp" />
+            android:textColor="@color/black"
+            android:textSize="18sp" />
+        </ScrollView>
+
     </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
