--- a/app/src/main/res/layout/layout_cardview_event.xml
+++ b/app/src/main/res/layout/layout_cardview_event.xml
@@ -3,12 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/event_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="-3dp"
         android:layout_marginStart="-2.75dp"
+        android:layout_marginBottom="-2dp"
         app:cardBackgroundColor="@color/transparent"
         android:focusable="true"
         android:clickable="true">
@@ -19,32 +21,34 @@
             <ImageView
                 android:id="@+id/event_bg"
                 android:layout_width="match_parent"
-                android:layout_height="130dp"
+                android:layout_height="180dp"
                 android:background="@color/colorWhite"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
         <ImageView
             android:id="@+id/event_img"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="120dp"
             app:srcCompat="@drawable/ic_events"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            />
+            app:layout_constraintEnd_toEndOf="parent" />
+
             <TextView
                 android:id="@+id/event_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/name"
-                android:textSize="15dp"
+                android:textSize="15sp"
                 android:paddingBottom="5dp"
                 android:textColor="@color/colorLightBlack"
                 android:layout_marginTop="20dp"
                 app:layout_constraintTop_toBottomOf="@+id/event_img"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </com.google.android.material.card.MaterialCardView>
 </LinearLayout>
