--- a/app/src/main/res/layout/layout_hamburgeritem.xml
+++ b/app/src/main/res/layout/layout_hamburgeritem.xml
@@ -1,29 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:id="@+id/hamburger_item"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:paddingTop="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="2dp">
+
         <ImageView
             android:id="@+id/hamburger_itemicon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            app:srcCompat="@drawable/ic_username"/>
 
         <TextView
             android:id="@+id/hamburger_itemtext"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            style="@style/HamburgerAlertTextViewStyle"
+            android:text="itemname"
+            android:fontFamily="@font/roboto"
+            android:paddingStart="24dp"
+            android:paddingEnd="16dp" />
     </LinearLayout>
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/black_overlay"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"/>
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"/>
 
 </LinearLayout>
